2009-04-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-note.c (hildon_note_rebuild): Only set the double spacing
	when it is a progress note.

2009-04-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-note.c (hildon_note_rebuild): Do not use a GtkHBox
	in the note, since there are no horizontally arranged contents.

2009-04-24  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-gtk.c (+set_flag): new generic method to
	set/delay a flag setting in a window.
	(hildon_gtk_window_set_progress_indicator):
	(hildon_gtk_window_set_do_not_disturb),
	(hildon_gtk_window_set_portrait_flags): use set_flag() to
	avoid code redundance.

2009-04-24  Claudio Saavedra  <csaavedra@igalia.com>

	Based on a patch by Alberto Garcia (agarcia@igalia.com)

	* src/hildon-gtk.c (set_clear_window_flag),
	(do_set_progress_indicator), (do_set_do_not_disturb),
	(do_set_portrait_flags),
	(hildon_gtk_window_set_progress_indicator),
	(hildon_gtk_window_set_do_not_disturb),
	(hildon_gtk_window_set_portrait_flags):
	Allow setting dnd-flag, progress indicator, and portrait flags
	when the window is not realized.

2009-04-24  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	* src/hildon-pannable-area.h: Add the hildon deprecated define to
	the size request policy function and defines.

2009-04-23  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Add the new API.
	* src/hildon-gtk.c (+hildon_gtk_window_set_portrait_flags): New
	method to set the portrait flags.
	* src/hildon-gtk.h: Add HildonPortraitFlags enum.

	Fixes: NB#112328 (Adding helpers for setting portrait properties)

2009-04-23  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-gtk.c (set_clear_window_flag): Add an Atom parameter,
	to allow using this method with other flags.
	(hildon_gtk_window_set_progress_indicator): Update accordingly.
	(hildon_gtk_window_set_do_not_disturb): Update accordingly.

2009-04-22  Alberto Garcia  <agarcia@igalia.com>
